CSS Formatting - Mainly Index+Questions

--- a/base-project/gamePages/questions.html
+++ b/base-project/gamePages/questions.html
@@ -29,106 +29,106 @@
 <body class='myBody'>
     <div class='myDiv'>
     <h2 class='myH2' id='teamName'>Team Name</h2>
-    <p id='instructions' class='questionPanel'>Who do you think it is? Enter your answers in the field below the image</p>
+    <p id='instructions' class='questionPanel'>Answer all 20 Questions Below!</p>
     <form id='testForm' action="php/submitAnswers.php" method="post">
     <div class='flex-container'>
         <div class='questionPanel'>
-            <label for='q1'>Question 1</label>
+            <p>Question 1</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 1 person'>
             <input type='text' id='q1' class='textInput' name='q1' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q2' class='label'>Question 2</label>
+            <p>Question 2</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 2 person'>
             <input type='text' id='q2' class='textInput' name='q2' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q3'>Question 3</label>
+            <p>Question 3</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 3 person'>
             <input type='text' id='q3' class='textInput' name='q3' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q4' class='label'>Question 4</label>
+            <p>Question 4</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 4 person'>
             <input type='text' id='q4' class='textInput' name='q4' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q5'>Question 5</label>
+            <p>Question 5</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 5 person'>
             <input type='text' id='q5' class='textInput' name='q5' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q6' class='label'>Question 6</label>
+            <p>Question 6</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 6 person'>
             <input type='text' id='q6' class='textInput' name='q6' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q7'>Question 7</label>
+            <p>Question 7</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 7 person'>
             <input type='text' id='q7' class='textInput' name='q7' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q8' class='label'>Question 8</label>
+            <p>Question 8</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 8 person'>
             <input type='text' id='q8' class='textInput' name='q8' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q9'>Question 9</label>
+            <p>Question 9</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 9 person'>
             <input type='text' id='q9' class='textInput' name='q9' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q10' class='label'>Question 10</label>
+            <p>Question 10</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 10 person'>
             <input type='text' id='q10' class='textInput' name='q10' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q11'>Question 11</label>
+            <p>Question 11</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 11 person'>
             <input type='text' id='q11' class='textInput' name='q11' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q12' class='label'>Question 12</label>
+            <p>Question 12</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 12 person'>
             <input type='text' id='q12' class='textInput' name='q12' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q13'>Question 13</label>
+            <p>Question 13</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 13 person'>
             <input type='text' id='q13' class='textInput' name='q13' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q14' class='label'>Question 14</label>
+            <p>Question 14</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 14 person'>
             <input type='text' id='q14' class='textInput' name='q14' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q15'>Question 15</label>
+            <p>Question 15</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 15 person'>
             <input type='text' id='q15' class='textInput' name='q15' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q16' class='label'>Question 16</label>
+            <p>Question 16</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 16 person'>
             <input type='text' id='q16' class='textInput' name='q16' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q17'>Question 17</label>
+            <p>Question 17</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 17 person'>
             <input type='text' id='q17' class='textInput' name='q17' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q18' class='label'>Question 18</label>
+            <p>Question 18</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 18 person'>
             <input type='text' id='q18' class='textInput' name='q18' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q19'>Question 19</label>
+            <p>Question 19</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 19 person'>
             <input type='text' id='q19' class='textInput' name='q19' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <label for='q20' class='label'>Question 20</label>
+            <p>Question 20</p>
             <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 20 person'>
             <input type='text' id='q20' class='textInput' name='q20' placeholder="Enter Your Guess Here">
         </div>
