--- a/base-project/index.html
+++ b/base-project/index.html
@@ -31,10 +31,10 @@
 <body class='myBody'>
     <div class="myDiv">
     <div class="welcomeScreen">
-        <h3>WELCOME TO KATHLEEN'S <br> WHO THE HECK IS THAT QUIZ</h3>
+        <p id="mainTitle">Welcome to Kathleen's: <br> WHO THE HECK IS THAT QUIZ</p>
         <input type='text' id='teamName' name='teamName' placeholder="Enter your team name">
         <!-- <input type='test' id='roomCode' name='roomCode' placeholder="Enter Room Code"> -->
-        <input type='button' id='teamBtn' value="SUBMIT" disabled>
+        <input type='button' id='teamBtn' value="BEGIN GAME" disabled>
     </div>
     </div>
 </body>
