--- a/base-project/gamePages/questions.html
+++ b/base-project/gamePages/questions.html
@@ -34,103 +34,103 @@
     <div class='flex-container'>
         <!-- each div with class questionPanel contains one question -->
         <div class='questionPanel'>
-            <p>Question 1</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 1 person'>
+            <p id='q1P'>Question 1</p>
+            <img src="game_images/backup.jpg" id='q1Img' class='questionImg' alt='question 1 person'>
             <input type='text' id='q1' class='textInput' name='q1' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 2</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 2 person'>
+            <p id='q2P'>Question 2</p>
+            <img src="game_images/backup.jpg" id='q2Img' class='questionImg' alt='question 2 person'>
             <input type='text' id='q2' class='textInput' name='q2' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 3</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 3 person'>
+            <p id='q3P'>Question 3</p>
+            <img src="game_images/backup.jpg" id='q3Img' class='questionImg' alt='question 3 person'>
             <input type='text' id='q3' class='textInput' name='q3' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 4</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 4 person'>
+            <p id='q4P'>Question 4</p>
+            <img src="game_images/backup.jpg" id='q4Img' class='questionImg' alt='question 4 person'>
             <input type='text' id='q4' class='textInput' name='q4' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 5</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 5 person'>
+            <p id='q5P'>Question 5</p>
+            <img src="game_images/backup.jpg" id='q5Img' class='questionImg' alt='question 5 person'>
             <input type='text' id='q5' class='textInput' name='q5' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 6</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 6 person'>
+            <p id='q6P'>Question 6</p>
+            <img src="game_images/backup.jpg" id='q6Img' class='questionImg' alt='question 6 person'>
             <input type='text' id='q6' class='textInput' name='q6' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 7</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 7 person'>
+            <p id='q7P'>Question 7</p>
+            <img src="game_images/backup.jpg" id='q7Img' class='questionImg' alt='question 7 person'>
             <input type='text' id='q7' class='textInput' name='q7' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 8</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 8 person'>
+            <p id='q8P'>Question 8</p>
+            <img src="game_images/backup.jpg" id='q8Img' class='questionImg' alt='question 8 person'>
             <input type='text' id='q8' class='textInput' name='q8' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 9</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 9 person'>
+            <p id='q9P'>Question 9</p>
+            <img src="game_images/backup.jpg" id='q9Img' class='questionImg' alt='question 9 person'>
             <input type='text' id='q9' class='textInput' name='q9' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 10</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 10 person'>
+            <p id='q10P'>Question 10</p>
+            <img src="game_images/backup.jpg" id='q10Img' class='questionImg' alt='question 10 person'>
             <input type='text' id='q10' class='textInput' name='q10' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 11</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 11 person'>
+            <p id='q11P'>Question 11</p>
+            <img src="game_images/backup.jpg" id='q11Img' class='questionImg' alt='question 11 person'>
             <input type='text' id='q11' class='textInput' name='q11' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 12</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 12 person'>
+            <p id='q12P'>Question 12</p>
+            <img src="game_images/backup.jpg" id='q12Img' class='questionImg' alt='question 12 person'>
             <input type='text' id='q12' class='textInput' name='q12' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 13</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 13 person'>
+            <p id='q13P'>Question 13</p>
+            <img src="game_images/backup.jpg" id='q13Img' class='questionImg' alt='question 13 person'>
             <input type='text' id='q13' class='textInput' name='q13' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 14</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 14 person'>
+            <p id='q14P'>Question 14</p>
+            <img src="game_images/backup.jpg" id='q14Img' class='questionImg' alt='question 14 person'>
             <input type='text' id='q14' class='textInput' name='q14' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 15</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 15 person'>
+            <p id='q15P'>Question 15</p>
+            <img src="game_images/backup.jpg" id='q15Img' class='questionImg' alt='question 15 person'>
             <input type='text' id='q15' class='textInput' name='q15' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 16</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 16 person'>
+            <p id='q16P'>Question 16</p>
+            <img src="game_images/backup.jpg" id='q16Img' class='questionImg' alt='question 16 person'>
             <input type='text' id='q16' class='textInput' name='q16' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 17</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 17 person'>
+            <p id='q17P'>Question 17</p>
+            <img src="game_images/backup.jpg" id='q17Img' class='questionImg' alt='question 17 person'>
             <input type='text' id='q17' class='textInput' name='q17' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 18</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 18 person'>
+            <p id='q18P'>Question 18</p>
+            <img src="game_images/backup.jpg" id='q18Img' class='questionImg' alt='question 18 person'>
             <input type='text' id='q18' class='textInput' name='q18' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 19</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 19 person'>
+            <p id='q19P'>Question 19</p>
+            <img src="game_images/backup.jpg" id='q19Img' class='questionImg' alt='question 19 person'>
             <input type='text' id='q19' class='textInput' name='q19' placeholder="Enter Your Guess Here">
         </div>
         <div class='questionPanel'>
-            <p>Question 20</p>
-            <img src="game_images/Brad-Pitt.jpg" class='questionImg' alt='question 20 person'>
+            <p id='q20P'>Question 20</p>
+            <img src="game_images/backup.jpg" id='q20Img' class='questionImg' alt='question 20 person'>
             <input type='text' id='q20' class='textInput' name='q20' placeholder="Enter Your Guess Here">
         </div>
     </div>
